Home Page fully completed

--- a/apps/main/templates/base.html
+++ b/apps/main/templates/base.html
@@ -30,6 +30,8 @@
 		{% include 'includes/footer.html' %}
 		{% block js %}
 		{% endblock %}
+		{% block footer %}
+		{% endblock %}
 	</main>
 </body>
 </html>
