--- a/apps/main/templates/includes/meta.html
+++ b/apps/main/templates/includes/meta.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Cache-Control" content="max-age=31536000">
-<meta http-equiv="Content-Security-Policy" content="object-src 'none'; base-uri 'self'; script-src 'self' 'nonce-{{ nonce }}' 'unsafe-inline'">
+<!--<meta http-equiv="Content-Security-Policy" content="object-src 'none'; base-uri 'self'; script-src 'self' 'nonce-{{ nonce }}' 'unsafe-inline'">-->
 <link rel="manifest" href="{% static 'manifest.webmanifest' %}?v=3">
 <meta name="csrf-token" content="{{ csrf_token }}">
 <meta name="public-secret-key" content="{{ PUBLIC_SECRET_KEY }}">
